Fixed hidden/visible element

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,11 +18,19 @@ html {
 .section-articles,
 .section-about,
 .section-contact {
-  display: none; }
+  opacity: 1;
+  transition: opacity 1s, height 0; }
 
 i {
   transform: skewX(12deg);
   margin: 0 auto; }
+
+.hidden {
+  opacity: 0;
+  transition: opacity 1s, height 0 1s;
+  height: 0;
+  width: 0;
+  display: none; }
 
 .active {
   background-color: rgba(255, 255, 255, 0.8); }
